--- a/src/main/resources/templates/coach.html
+++ b/src/main/resources/templates/coach.html
@@ -13,50 +13,55 @@
 		<div th:replace="fragments/secureHeader :: secureHeader"></div>
 	</header>
 	
-	<div class="container">
-		<h1>Coaches</h1>
+	<div class="main-container">
+		<div class="tittle-div">
+			<h1>Coaches</h1>
+		</div>
 		<div class ="search-div">
 			<form th:action="@{/rest/coach}">
+				<label>Search</label>
 				<input class="search-input" id="search-input" type="text" name="keyword" th:value="${keyword}" required />
-				&nbsp;
+				
 				<input class="search-button" type="submit" value="Search"/>
-				&nbsp;
+				
 				<input class="clear-button" type="button" value="Clear" id="clear-button"/>
 			</form>
-			&nbsp;
-			<button class="add-button"  id="addButton">Add new Coach</button>
+			<div>
+				<button class="add-button"  id="addButton">Add new Coach</button>
+			</div>
 		</div>
-		
-		<table class="custom-table">
-			<tbody>
-				<tr>
-					<th>Photo</th>
-					<th>Name</th>
-					<th>Surname</th>
-					<th>Phone</th>
-					<th>Email</th>
-					<th>Category</th>
-					<th>Options</th>
-				</tr>
-				<tr th:each="coach : ${coaches}">
-					<td >
-						<a class="photo-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">
- 							<img class="min-images" th:src="@{'/img/coaches/' + ${coach.id} +'.jpg'}" width="60" height="60">
- 						</a>
-					</td>
-					<td th:text="${coach.name}"></td>
-					<td th:text="${coach.surname}"></td>
-					<td th:text="${coach.phone}"></td>
-					<td th:text="${coach.email}"></td>
-					<td th:text="${coach.category}"></td>
-					<td class="button-group">
-						<a class="edit-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">Edit</a>
-						<a class="details-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">Image</a>
-						<a class="delete-button" th:href="@{/rest/coach/delete/(id=${coach.id})}" >Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-div">
+			<table class="custom-table">
+				<tbody>
+					<tr>
+						<th>Photo</th>
+						<th>Name</th>
+						<th>Surname</th>
+						<th>Phone</th>
+						<th>Email</th>
+						<th>Category</th>
+						<th>Options</th>
+					</tr>
+					<tr th:each="coach : ${coaches}">
+						<td >
+							<a class="photo-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">
+	 							<img class="min-images" th:src="@{'/img/coaches/' + ${coach.id} +'.jpg'}" width="60" height="60">
+	 						</a>
+						</td>
+						<td th:text="${coach.name}"></td>
+						<td th:text="${coach.surname}"></td>
+						<td th:text="${coach.phone}"></td>
+						<td th:text="${coach.email}"></td>
+						<td th:text="${coach.category}"></td>
+						<td class="button-group">
+							<a class="edit-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">Edit</a>
+							<a class="details-button" th:href="@{/rest/coach/findById/(id=${coach.id})}">Image</a>
+							<a class="delete-button" th:href="@{/rest/coach/delete/(id=${coach.id})}" >Delete</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 	
 	<footer>
