--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -123,6 +123,38 @@ header a:hover {
 	
 }
 
+/*Global pages with tables*/
+.main-container{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 80px 180px 1fr;
+	width: 80%;
+	margin: auto;
+	overflow: hidden;
+	grid-gap:10px;
+	
+}
+
+.tittle-div{
+	grid-column:2/6;
+	grid-row:1/1;
+	
+}
+
+.tittle-div h1{
+	border-bottom: 2px solid gray;
+}
+
+.search-div{
+	grid-column:1/2;
+	grid-row:2/3;
+}
+
+.table-div{
+	grid-column:2/6;
+	grid-row:2/4;
+}
+
 /*Main page showcase */
 
 .main-page-showcase{
@@ -310,14 +342,14 @@ footer{
 
 .search-div{
 	background-color: #e6e6e6;
-	padding:20px;
+	padding:10px;
 	margin-bottom: 5px;
 	display: grid;
 	grid-template-columns: 1fr;
 }
 
 .search-input{ 
-	width:50%;
+	width:100%;
 	height:30px;
 	border: 1px solid gray;
   	border-radius: 4px;
@@ -333,6 +365,7 @@ footer{
 	border: 0;
 	transition-duration: 0.4s;
 	text-decoration: none;
+	margin-top: 10px;
 }
 
 .search-button:hover {
@@ -348,6 +381,7 @@ footer{
 	border: 0;
 	transition-duration: 0.4s;
 	text-decoration: none;
+	margin-top: 10px;
 }
 
 .clear-button:hover {
@@ -373,12 +407,13 @@ footer{
 /*Team page*/
 .team-container{
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	width: 80%;
+	grid-template-columns: 1fr 1fr;
+	
 	margin:auto;
 	overflow: hidden;
 	background-color: #e6e6e6;
 }
+
 .team-div {
 	margin:10px;
 	padding: 20px;
@@ -474,9 +509,28 @@ footer{
 	margin: 10px;
 }
 
+/*Attendance modal*/
+.attendance-div{
+	margin-top: 10px;
+}
+.attendance-player-div{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	width: 50%;
+	border-bottom: 1px solid black;
+	padding: 5px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 15p;
+	line-height: 1.5;
+}
 
+.div1{
+	grid-column:1/3;
+}
 
-
+.div2 input {
+	padding: 20px;
+}
 
 
 
