--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -12,50 +12,55 @@
 		<div th:replace="fragments/secureHeader :: secureHeader"></div>
 	</header>
 	
-		<div class="container">
-		<h1>Players</h1>
+		<div class="main-container">
+		<div class="tittle-div">
+			<h1>Players</h1>
+		</div>
 		<div class ="search-div">
 			<form th:action="@{/rest/player}">
+				<label>Search</label>
 				<input class="search-input" id="search-input" type="text" name="keyword" th:value="${keyword}" required />
-				&nbsp;
+				
 				<input class="search-button" type="submit" value="Search"/>
-				&nbsp;
+				
 				<input class="clear-button" type="button" value="Clear" id="clear-button"/>
 			</form>
-			&nbsp;
-			<button class="add-button"  id="addButton">Add new Player</button>
+			<div>
+				<button class="add-button"  id="addButton">Add new Player</button>
+			</div>
 		</div>
-		
-		<table class="custom-table">
-			<tbody>
-				<tr>
-					<th>Picture</th>
-					<th>Name</th>
-					<th>Surname</th>
-					<th>Phone</th>
-					<th>Email</th>
-					<th>Position</th>
-					<th>Options</th>
-				</tr>
-				<tr th:each="player : ${players}">
-					<td >
-						<a class="photo-button" th:href="@{/rest/player/findById/(id=${player.id})}">
- 							<img class="min-images" th:src="@{'/img/players/' + ${player.id} +'.jpg'}" width="60" height="60">
- 						</a>
-					</td>
-					<td th:text="${player.name}"></td>
-					<td th:text="${player.surname}"></td>
-					<td th:text="${player.phone}"></td>
-					<td th:text="${player.email}"></td>
-					<td th:text="${player.position}"></td>
-					<td class="button-group">
-						<a class="edit-button" th:href="@{/rest/player/findById/(id=${player.id})}">Edit</a>
-						<a class="details-button" th:href="@{/rest/player/findById/(id=${player.id})}">Image</a>
-						<a class="delete-button" th:href="@{/rest/player/delete/(id=${player.id})}" >Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-div">
+			<table class="custom-table">
+				<tbody>
+					<tr>
+						<th>Picture</th>
+						<th>Name</th>
+						<th>Surname</th>
+						<th>Phone</th>
+						<th>Email</th>
+						<th>Position</th>
+						<th>Options</th>
+					</tr>
+					<tr th:each="player : ${players}">
+						<td >
+							<a class="photo-button" th:href="@{/rest/player/findById/(id=${player.id})}">
+	 							<img class="min-images" th:src="@{'/img/players/' + ${player.id} +'.jpg'}" width="60" height="60">
+	 						</a>
+						</td>
+						<td th:text="${player.name}"></td>
+						<td th:text="${player.surname}"></td>
+						<td th:text="${player.phone}"></td>
+						<td th:text="${player.email}"></td>
+						<td th:text="${player.position}"></td>
+						<td class="button-group">
+							<a class="edit-button" th:href="@{/rest/player/findById/(id=${player.id})}">Edit</a>
+							<a class="details-button" th:href="@{/rest/player/findById/(id=${player.id})}">Image</a>
+							<a class="delete-button" th:href="@{/rest/player/delete/(id=${player.id})}" >Delete</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 	
 	<footer>
