--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -532,6 +532,42 @@ footer{
 	padding: 20px;
 }
 
+/*Indiidual details pages, players, training, coaches*/
+.individual-main-container{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 80px 1fr 1fr;
+	width: 80%;
+	margin: auto;
+	overflow: hidden;
+	grid-gap:10px;
+}
 
+.individual-main-container h1{
+	border-bottom: 2px solid gray;
+}
+
+
+
+.individual-tittle-div{
+	grid-column:1/3;
+	grid-row:1/1;
+}
+
+.individual-attendance-div{
+	grid-column:3/6;
+	grid-row:1/1;
+}
+
+.individual-side-div{
+	grid-column:1/3;
+	grid-row:2/3;
+	
+}
+
+.individual-center-div{
+	grid-column:3/6;
+	grid-row:2/4;
+}
 
 
