--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,6 +23,8 @@ ul {
 	
 }
 
+
+
 a{
 	text-decoration: none;
 }
@@ -70,6 +72,10 @@ a{
   text-align: left;
   background-color: #333333;
   color: #ffffff;
+}
+
+.custom-table li {
+	display: inline;
 }
 
 .min-images{
@@ -536,7 +542,7 @@ footer{
 .individual-main-container{
 	display:grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 80px 1fr 1fr;
+	grid-template-rows: 80px 1fr;
 	width: 80%;
 	margin: auto;
 	overflow: hidden;
@@ -561,13 +567,13 @@ footer{
 
 .individual-side-div{
 	grid-column:1/3;
-	grid-row:2/3;
+	grid-row:2/2;
 	
 }
 
 .individual-center-div{
 	grid-column:3/6;
-	grid-row:2/4;
+	grid-row:2/3;
 }
 
 
