--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -36,21 +36,17 @@
 						<th>Picture</th>
 						<th>Name</th>
 						<th>Surname</th>
-						<th>Phone</th>
-						<th>Email</th>
 						<th>Position</th>
 						<th>Options</th>
 					</tr>
 					<tr th:each="player : ${players}">
 						<td >
-							<a class="photo-button" th:href="@{/rest/player/findById/(id=${player.id})}">
+							<a class="photo-button" th:href="@{/rest/player/playerDetails/(id=${player.id})}">
 	 							<img class="min-images" th:src="@{'/img/players/' + ${player.id} +'.jpg'}" width="60" height="60">
 	 						</a>
 						</td>
 						<td th:text="${player.name}"></td>
 						<td th:text="${player.surname}"></td>
-						<td th:text="${player.phone}"></td>
-						<td th:text="${player.email}"></td>
 						<td th:text="${player.position}"></td>
 						<td class="button-group">
 							<a class="edit-button" th:href="@{/rest/player/findById/(id=${player.id})}">Edit</a>
