--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,6 +27,7 @@ ul {
 
 a{
 	text-decoration: none;
+	color: black;
 }
 
 .highlight {
@@ -427,6 +428,7 @@ footer{
 }
 
 .team-li{
+	margin-bottom:5px;
 	background-color: #333333;
 	color: #f4f4f4;
 	width: 100%;
@@ -435,7 +437,7 @@ footer{
 
 .team-li a{
 	color: #f4f4f4;
-	border-right: 1px solid #f4f4f4;
+	/*border-right: 1px solid #f4f4f4;*/
 	padding: 5px;  
 	
 }
@@ -568,6 +570,7 @@ footer{
 .individual-side-div{
 	grid-column:1/3;
 	grid-row:2/2;
+	background-color: gray;
 	
 }
 
@@ -576,4 +579,62 @@ footer{
 	grid-row:2/3;
 }
 
+/*Admin page*/
+.admin-main-container{
+	display:grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 80px 1fr,1fr,1fr;
+	width: 80%;
+	margin: auto;
+	overflow: hidden;
+	grid-gap:10px;
+}
+
+.admin-main-container h1{
+	border-bottom: 2px solid gray;
+}
+
+.admin-tittle1-div{
+	grid-column:1/3;
+	grid-row:1/1;
+}
+
+.admin-tittle2-div{
+	grid-column:3/6;
+	grid-row:1/1;
+}
+
+.admin-side1-div{
+	grid-column:1/3;
+	grid-row:2/2;
+	background-color: gray;
+	
+}
+
+.admin-center1-div{
+	grid-column:3/6;
+	grid-row:2/2;
+}
+
+.admin-tittle3-div{
+	grid-column:1/3;
+	grid-row:3/3;
+}
+
+.admin-tittle4-div{
+	grid-column:3/6;
+	grid-row:3/3;
+}
+
+.admin-side2-div{
+	grid-column:1/3;
+	grid-row:4/4;
+	background-color: gray;
+	
+}
+
+.admin-center2-div{
+	grid-column:3/6;
+	grid-row:4/4;
+}
 
