--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -25,7 +25,7 @@
 				
 				<input class="clear-button" type="button" value="Clear" id="clear-button"/>
 			</form>
-			<div>
+			<div sec:authorize="hasRole('ROLE_ADMIN')">
 				<button class="add-button"  id="addButton">Add new Player</button>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 						<th>Name</th>
 						<th>Surname</th>
 						<th>Position</th>
-						<th>Options</th>
+						<th sec:authorize="hasRole('ROLE_ADMIN')">Options</th>
 					</tr>
 					<tr th:each="player : ${players}">
 						<td >
@@ -48,7 +48,7 @@
 						<td th:text="${player.name}"></td>
 						<td th:text="${player.surname}"></td>
 						<td th:text="${player.position}"></td>
-						<td class="button-group">
+						<td sec:authorize="hasRole('ROLE_ADMIN')" class="button-group">
 							<a class="edit-button" th:href="@{/rest/player/findById/(id=${player.id})}">Edit</a>
 							<a class="delete-button" th:href="@{/rest/player/delete/(id=${player.id})}" >Delete</a>
 						</td>
@@ -207,8 +207,8 @@
 						<select id="teamIdEdit" name="teamId">
 							<option>Select Team</option>
 							<option th:each="team:${teams}"
-							th:value="${team.id}"
-							th:text="${team.teamName}">
+							th:value="${team != null} ? ${team.id} : 'null'"
+							th:text ="${team != null} ? ${team.teamName} : '-'">
 						</select>
 					</div>
 					<div class="form-div">
