--- a/src/main/resources/templates/training.html
+++ b/src/main/resources/templates/training.html
@@ -25,7 +25,7 @@
 				
 				<input class="clear-button" type="button" value="Clear" id="clear-button"/>
 			</form>
-			<div>
+			<div sec:authorize= "hasAnyRole('ROLE_ADMIN', 'ROLE_USER')" >
 				<button class="add-button"  id="addButton">Add new Training</button>
 			</div>
 		</div>
@@ -36,7 +36,7 @@
 						<th>Team</th>
 						<th>Description</th>
 						<th>Date</th>
-						<th>Options</th>
+						<th sec:authorize= "hasAnyRole('ROLE_ADMIN', 'ROLE_USER')">Options</th>
 					</tr>
 					<tr th:each="training : ${trainings}">
 						<td>
@@ -44,7 +44,7 @@
 						</td>
 						<td th:text="${training.description}"></td>
 						<td th:text="${training.date}"></td>
-						<td class="button-group">
+						<td sec:authorize= "hasAnyRole('ROLE_ADMIN', 'ROLE_USER')" class="button-group">
 							<a class="edit-button" th:href="@{/rest/training/findById/(id=${training.id})}">Edit</a>
 							<a class="attendance-button" th:href="@{/rest/training/findById/(id=${training.id})}">Attendance</a>
 							<a class="delete-button" th:href="@{/rest/training/delete/(id=${training.id})}" >Delete</a>
