--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -570,7 +570,7 @@ footer{
 .individual-side-div{
 	grid-column:1/3;
 	grid-row:2/2;
-	background-color: gray;
+	
 	
 }
 
@@ -607,7 +607,7 @@ footer{
 .admin-side1-div{
 	grid-column:1/3;
 	grid-row:2/2;
-	background-color: gray;
+	background-color: #e6e6e6;
 	
 }
 
@@ -629,7 +629,7 @@ footer{
 .admin-side2-div{
 	grid-column:1/3;
 	grid-row:4/4;
-	background-color: gray;
+	
 	
 }
 
