Added dropdown menu

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Admin</title>
+<title>Administrator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Football management system">
 <link href="/css/style.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 			<h1>Users</h1>
 		</div>
 		<div class="admin-side1-div">
-			<form th:action="@{/secure/admin/addUser}" method="post">
+			<form th:action="@{/secure/admin/user/addUser}" method="post">
 				<div class="form-div">
 						<label>Id</label>
 						<input id="idEdit" type="text" name="id">
