--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,8 +13,6 @@ body {
 .container {
 	width: 80%;
 	margin:auto;
-	overflow: hidden;
-	
 }
 
 ul {
@@ -90,45 +88,82 @@ a{
 header{
 	background: #333333;
 	color: #ffffff;
-	padding-top: 30px;
-	min-height: 70px;
+	padding-top: 20px;
+	padding-bottom:10px;
+	height:120px;
 	border-bottom: #b30000 5px solid;
 }
 
-header a {
+header p a {
+	color:white;
+}
+
+.header-container{
+	width: 80%;
+	margin:auto;
+	display: grid;
+}
+
+.header1{
+	background: #333333;
+}
+
+
+
+.header2{
+	background: #333333;
+	
+}
+
+/*Dropdown menu*/
+header nav {
+	width: 100%;
+	
+}
+
+header nav ul {
+	float: left;
+	
+}
+
+header nav ul li {
+	float: left;
+	list-style: none;
+	position:relative;
+	
+}
+
+header nav ul li a {
+	font-size:18px;
+	padding-right: 20px;
+	display: block;
 	text-decoration: none;
-	color: #ffffff;
-	text-transform: uppercase;
-	font-size: 16px;
+	color: #ffffff;	
+}
+
+header nav ul li a:hover {
+	color:#b30000;
+}
+
+header nav ul li ul {
+	padding:10px;
+	display: none;
+	position: absolute;
+	background-color: #333333;
+	border-radius: 0px 0px 5px 5px ;	
+}
+
+header nav ul li ul a {
+	padding:5px;	
+}
+
+header nav ul li:hover ul {
+	display: block;	
 }
 
 
-header li {
-	
-	display: inline;
-	padding: 0 20px 0 0;
-}
 
-header .main-page-title{
-	float:left;
-	
-}
 
-header .login{
-	float:right;
-	margin-top: 20px;
-	
-}
-
-header nav{
-	float:left;
-	padding-bottom: 10px;	
-}
-
-header a:hover {
-	color: #b30000;
-	
-}
 
 /*Global pages with tables*/
 .main-container{
@@ -171,6 +206,19 @@ header a:hover {
 	color: #ffffff;
 	
 }
+
+.main-page-tittle{
+	background-color: red;
+}
+
+.main-page-tittle h1{
+	float: left;
+}
+
+.main-page-tittle p{
+	float: right;
+}
+
 
 .main-page-showcase h1{
 	margin-top: 100px;
